# multi-dashboard

./: .gitignore  calidad_agua_escuelas.py  data_reference.csv  desaparecidos.py  entorno_alimentario_escuelas.py  export_calidad_agua_html.py  export_desaparecidos_html.py  export_entorno_alimentario_html.py  export_inah_sites_html.py  export_incidencia_delictiva_html.py  export_productos_agricolas_html.py  export_temperaturas_lluvias_html.py  inah_sites.py  incidencia_delictiva.py  productos_agricolas.py  pyproject.toml
assets/: style.css
dashboard/: becas_cnbbbj.py  calidad_agua_escuelas.py  casas_empeno.py  cgpe.py  conalep_becas_externas.py  conapo_envejecimiento.py  cuenta_publica.py  desaparecidos.py  fone.py  imss_directorio.py  inah_sites.py  incidencia_delictiva.py  internal_migration_flow.py  mesoamerica.py  meta_transnacional.py  migration_flow.py  mortalidad.py  natalidad_defunciones.py  pibe.py  produccion_minera.py  productos_agricolas.py  puertos.py  sedena_concesiones.py  suicidios_entidad.py  temperaturas_lluvias.py  tollbooths.py  unam_egresos.py  unam_poblacion.py  worldcup.py  zipf_municipios.py
scripts/: analisis_producto_vs_pib_mineria.py  build_match_positions.py  build_worldcup_matrix.py  carencias_pib_2024.py  conapo_analisis.py  consolidate_fone.py  csv_to_parquet.py  download_cngmd.py  download_fone.py  download_inegi.py  download_pibe.py  download_sat_recaudacion.py  download_sectur_hoteleria.py  enrich_gasolina.py  extract_cgpe_gasto_programable.py  extract_directorio_imss.py  extract_egr_y_tit.py  extract_egreso_carreras.py  (+31 more)
(+62 files in other folders)
