[project]
name = "multi-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "fastexcel>=0.20.2",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "xlrd>=2.0.2",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.13",
    "kaleido>=1.3.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.9.0",
    "pandas>=3.0.3",
]
